PN-5291 fix test (#278)
* PN-5291 fix test

* PN-5291 DirtiesContext

* PN-5291 fix2

* PN-5291 Disabled test

* PN-5291 disabled test 2

* PN-5291 trigger build